Añadido un usuario tiene tareas, estas se pueden ver, añadir una tarea o eliminar una tarea, también añadido la parte de modificar un usuario

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -1,9 +1,11 @@
-<div class="navbar-container">
-    <nav class="navbar">
-        <div class="navbar-nav">
-            <a routerLink="/home" routerLinkActive="active-link" class="nav-link">Home</a>
-            <a routerLink="/add" routerLinkActive="active-link" class="nav-link">Add user</a>
-            <a routerLink="/list" routerLinkActive="active-link" class="nav-link">Ver users</a>
-        </div>
-    </nav>
-</div>
+<ul class="nav justify-content-center">
+    <li class="nav-item">
+        <a routerLink="/home" routerLinkActive="active-link" class="nav-link">Home</a>
+    </li>
+    <li class="nav-item">
+        <a routerLink="/add" routerLinkActive="active-link" class="nav-link">Add user</a>
+    </li>
+    <li class="nav-item">
+        <a routerLink="/list" routerLinkActive="active-link" class="nav-link">Ver users</a>
+    </li>
+</ul>
